# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = nudge
description = Nudge people to update JIRA
author = Joe Talerico
author-email = joe.talerico@gmail.com
license = Apache
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True
install_requires = logger;jira;argparse;textwrap3
python_requires = >=3.6

